--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
                         <p class="card-text mbr-fonts-style align-center display-7">284 654 280 54</p>
                         <div class="social-row display-7">
                             <div class="soc-item">
-                                <a href="tel:05432975516">
+                                <a href="tel:+905432975516">
                                     <span class="mbr-iconfont mobi-mbri-phone mobi-mbri"></span>
                                 </a>
                             </div>
                             <div class="soc-item">
-                                <a href="https://wa.me/05432975516">
+                                <a href="https://wa.me/905432975516">
                                     <span class="mbr-iconfont socicon-whatsapp socicon"></span>
                                 </a>
                             </div>
@@ -140,12 +140,12 @@
                         <p class="card-text mbr-fonts-style align-center display-7">368 471 340 28</p>
                         <div class="social-row display-7">
                             <div class="soc-item">
-                                <a href="tel:05309429418">
+                                <a href="tel:+905309429418">
                                     <span class="mbr-iconfont mobi-mbri-phone mobi-mbri"></span>
                                 </a>
                             </div>
                             <div class="soc-item">
-                                <a href="https://wa.me/05309429418">
+                                <a href="https://wa.me/905309429418">
                                     <span class="mbr-iconfont socicon-whatsapp socicon"></span>
                                 </a>
                             </div>
@@ -174,12 +174,12 @@
                         <p class="card-text mbr-fonts-style align-center display-7"></p>
                         <div class="social-row display-7">
                             <div class="soc-item">
-                                <a href="tel:05309429418">
+                                <a href="tel:+905321694286">
                                     <span class="mbr-iconfont mobi-mbri-phone mobi-mbri"></span>
                                 </a>
                             </div>
                             <div class="soc-item">
-                                <a href="tel:05309429418">
+                                <a href="https://wa.me/905321694286">
                                     <span class="mbr-iconfont socicon-whatsapp socicon"></span>
                                 </a>
                             </div>
@@ -237,7 +237,7 @@
                 </div>
             </div>
             <div class="map-wrapper col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=40.59887651070126, 33.61685102057191" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCt1265A4qvZy9HKUeA8J15AOC4SrCyZe4&amp;q=40.59887651070126, 33.61685102057191" allowfullscreen=""></iframe></div>
             </div>
         </div>
     </div>
@@ -254,7 +254,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler mx-auto" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="3TWhiEMpGB9bvOYo/9Uldpu2TF2nCPnbYPUjMq+DMcuE9g1kvThttOAfPCgn8SppQ6vU0HiDNVMKF4pBXRt/Ujm0Tu9twlJ5emRTx8YhF778yxHy5WXH0HQqBsBTuO8F">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler mx-auto" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="g2j7cgKXyRUPqo2dqCfT8TMMsgjqverghyLKKOCvIWkTvzXM6mJxeD8w6oEME1yJy4fOgFsXLO1ENFbLg84WCH+TCSv4Ob0yHUOTyfhWhk708AiCAoxiQcCfUuwwiq9I">
                     <p class="mbr-text mbr-fonts-style align-center mb-4 display-7"></p>
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Mesajınız İletildi. En kısa sürede iletişime geçilecek.</div>
@@ -275,7 +275,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/t" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Designed with Mobirise <a href="https://mobirise.site/j" style="color:#aaa;">web</a> creator</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/u" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Set up a free website with <a href="https://mobirise.site/z" style="color:#aaa;">Mobirise</a></p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
